@@ -1,3 +1,8 @@
+2006-09-30  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
+	by dgp.
+
 2006-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/makefile.vc:  Updated MSVC build to properly deal with
